Update logic separations categories for user directories and random names folders